<resources>
    <string name="app_name">Shoppie</string>
    <string name="title_splash"><font color="#dc6f31">Your Shopping</font> Destination\nfor Everything</string>
    <string name="sub_title_splash">Get personalized recommendations\nEnjoy Fast, Free Shipping</string>
    <string name="Get_Start">Get Start Now</string>
    <string name="sub_title">Beautiful eCommerce UI Kit\nfor your online store</string>
    <string name="LetsStart">Let\'s get start now</string>
    <string name="SignIn">Sign In</string>
    <string name="GoodToSeeYouBack">Good to see you back!</string>
    <string name="Your_Email">Your Email</string>
    <string name="example_email">example123@gmail.com</string>
    <string name="your_password">Your Password</string>
    <string name="sign_in">Sign in</string>
    <string name="you_haven_t_got_any_account_yet">You haven\'t got any account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="CreateAccount">Provide your information\nto create a new account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authentic_information">Authentic Information</string>
    <string name="_0_of_2">0 of 2</string>
    <string name="your_info">Your personal information</string>
    <string name="Your_Name">Your full name</string>
    <string name="your_number_phone">Your phone number</string>
    <string name="your_birthday">Your date of birth</string>
    <string name="example_birthday">dd/MM/yyyy</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="input_your_name">Input your name</string>
    <string name="example_number_phone">0123456789</string>
    <string name="sign_up_successfully">Sign up successfully</string>
    <string name="ok">OK</string>
    <string name="please_check_your_email_to_verify">Please check your email to verify</string>
    <string name="your_email_has_never_been_verified">Your email has never been verified!</string>
    <string name="please_check_your_email_to_verify_or_resend_a_verified_email_if_you_want">Please check your email to verify or resend a verified email if you want</string>
    <string name="cancel">Cancel</string>
    <string name="resend">Resend</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="duong_thuan">Duong Thuan</string>
    <string name="search_here">Search here</string>
    <string name="categories">Categories</string>
    <string name="category1">Category1</string>
</resources>