<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="signUpVM"
            type="com.example.shoppie.viewmodel.SignUpViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_successfully"
                    android:fontFamily="@font/league_spartan_bold"
                    android:textSize="30sp"
                    android:textColor="@color/blue"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_check_your_email_to_verify"
                    android:fontFamily="@font/league_spartan"
                    android:textSize="20sp"
                    android:textColor="@color/blue"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:background="@color/blue"
                android:orientation="horizontal"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_OK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_dialog"
                    android:fontFamily="@font/league_spartan_bold"
                    android:textColor="@color/blue"
                    android:text="@string/ok"
                    android:textSize="20sp"
                    android:onClick="@{() -> signUpVM.onClick_btnOK_alDl()}"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>