<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.view.activity.SignInActivity">

    <data>
        <variable
            name="signInVM"
            type="com.example.shoppie.viewmodel.SignInViewModel" />

        <import type="android.view.View"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bubbles2">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.37">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/league_spartan_bold"
                    android:text="@string/SignIn"
                    android:textColor="@color/black"
                    android:textSize="60sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/league_spartan_medium"
                    android:text="@string/GoodToSeeYouBack"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="0.15">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/league_spartan_bold"
                    android:text="@string/Your_Email"
                    android:textColor="@color/blue"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/edTx_InputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/input_box"
                    android:ems="10"
                    android:fontFamily="@font/league_spartan_medium"
                    android:hint="@string/example_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    android:text="@={signInVM.email}"/>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/league_spartan_bold"
                    android:text="@string/your_password"
                    android:textColor="@color/blue"
                    android:textSize="25sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:boxStrokeWidth="0dp"
                    app:boxBackgroundMode="none"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edTx_InputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_box"
                        android:ems="10"
                        android:fontFamily="@font/league_spartan_medium"
                        android:inputType="textPassword"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="10dp"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:text="@={signInVM.password}"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/txVw_ErrorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan_medium"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                app:layout_constraintVertical_bias="0.05"
                android:text="@{signInVM.errorMessage}"
                android:gravity="center"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_SignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_blue"
                android:fontFamily="@font/league_spartan_medium"
                android:paddingHorizontal="60dp"
                android:paddingVertical="10dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:onClick="@{() -> signInVM.onClick_btnSignIn()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                app:layout_constraintVertical_bias="0.35"/>

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_SignIn"
                app:layout_constraintVertical_bias="0.2">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/league_spartan"
                    android:text="@string/you_haven_t_got_any_account_yet"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txVw_SignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/league_spartan_bold"
                    android:onClick="@{() -> signInVM.onClick_txVwSignUp()}"
                    android:text="@string/sign_up"
                    android:textColor="@color/blue"
                    android:textSize="20sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/unclear"
            android:indeterminate="true"
            android:indeterminateTint="@color/light_blue"
            android:visibility="@{signInVM.isShowProcessBar ? View.VISIBLE : View.GONE}"/>


    </FrameLayout>


</layout>